fixed icons on small screens

--- a/mitchs-website/src/app/pages/caving/caving.scss
+++ b/mitchs-website/src/app/pages/caving/caving.scss
@@ -37,3 +37,12 @@ h2 {
 #nss-logo {
   max-height: 120px;
 }
+
+@media (max-width: 620px) {
+  #tg-logo {
+    width: 40%;
+  }
+  #nss-logo {
+    width: 40%;
+  }
+}
